--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,10 @@ textarea {
 	line-height: 1.5;
 }
 
+a {
+	text-decoration:none;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: "Patua One", serif;
   letter-spacing: 2px;
